...
            </TextView >
        </LinearLayout >

        <View style="@style/DefaultDialog.Line" />

        <EditText
            android:id="@+id/project_upload_name"
            style="@style/DefaultDialog.EditText"
            android:hint="@string/new_project_dialog_hint"
            android:inputType="text"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

...
