...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
          android:id="@+id/dialog_upload_progess_message"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/material_design_spacing_x_large"
          android:text="@string/progress_upload_dialog_message" />

       <ProgressBar
...
