...
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

	<Button
        android:id="@+id/note_picker_button_cancel"
		android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
		android:background="@drawable/button_background_selector"
        android:src="@drawable/ic_play" />
	<Button
        android:id="@+id/note_picker_button_ok"
		android:text="@string/ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_gravity="center"
        android:layout_above="@id/note_picker_button_cancel"
        android:background="@drawable/button_background_selector"
        android:src="@drawable/ic_play" />
...
